[package]
name = "mitrid_core"
version = "0.1.0"
authors = ["Christian Nyumbayire <chritchens@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/yobicash/libyobicash"
description = "Core of the Mitrid framework"
categories = ["development-tools", "cryptography"]

[badges]
travis-ci = { repository = "mitrid-labs/mitrid-core", branch = "master" }
coveralls = { repository = "mitrid-labs/mitrid-core", branch = "master", service = "github" }

[dependencies]
futures = "^0.1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_cbor = "^0.9"
hex = "^0.3"
regex = "^1"